@@ -1,3 +1,7 @@
+2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>
+
+	* DLD-FUNCTIONS/find.cc (Ffind): Doc fix.
+
 2007-04-11  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.in (DOCSTRINGS): Don't echo commands.
