@@ -1,3 +1,8 @@
+2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>
+
+	* spdiags.m: Fixed the four-argument case to work for columns of
+	length one.
+
 2007-04-12  John W. Eaton  <jwe@octave.org>
 
 	* optimization/qp.m: Avoid Octave indexing bug.
